
    Add a check to clock init.d to make sure users dont try to set 
    config their clock in rc.conf anymore.

    Redo hostname/domainname scripts to use files in /etc/conf.d/ 
    instead of creating files in /etc/.  Allows for controlling things 
    like the behavior of setting the 'domain' in resolv.conf since users 
    may not always understand exactly what's going on.

  15 Nov 2004; Roy Marples <uberlord@gentoo.org>:

    Added searchdomains_ESSID option to essidnet
    Stopped the domain setting from putting the same entry in search
      in config-system and essidnet
    Removed second warning in net.lo when configuration not set
    Documented APIPA module in net.example
    Added kernel checking for vlan - fixes #70829
    Added kernel checking for bonding, bridging and tuntap
    Added iproute2 support to the APIPA module

  13 Nov 2004; Mike Frysinger <vapier@gentoo.org>:

    Update the svcdir mounting #69595.  Instead of mounting in /mnt 
    and then bind mounting to $svcdir, we mount the ramdisk on $svcidr.

  12 Nov 2004; Roy Marples <uberlord@gentoo.org>:

    Added arping duplicate address detection to net.lo
    Created Automatic Private IP Addressing (APIPA) module

    Added dependancy checking to ipppd
    Bonding is now started pre instead of post
    Fixed iface variable in dhcp modules for vlans
    Changed get_device to interface_device
    Changed get_type to interface_type
    Added vlan configuration options and documented them in net.example
    Fixed bridge configuration handling
    Removed _get_vlans from iproute2 and ifconfig as vlan now does it itself

  11 Nov 2004; Roy Marples <uberlord@gentoo.org>:

    Fixed category of rp-pppoe to net-dialup error when requesting ADSL
    Improved inet6 address deletion and detection in iproute2
    Improved gateway logic in ifconfig
    Changed all wireless reporting functions to use iwgetid instead of
      parsing iwconfig output except for essid

* rc-scripts 1.6.6 (08 Nov 2004)
