@@ -11,6 +11,11 @@
     like the behavior of setting the 'domain' in resolv.conf since users 
     may not always understand exactly what's going on.
 
+    Stop referring to conf.d/basic as a global rc config option.  That 
+    file hasn't been used in a long time and has since been replaced 
+    with env.d/00basic.  Updated sbin/runscript.sh, etc/profile, 
+    sbin/rc-help.sh, and src/awk/cachedepends.awk.
+
   15 Nov 2004; Roy Marples <uberlord@gentoo.org>:
 
     Added searchdomains_ESSID option to essidnet
